# TokenDye

./: .gitignore  .gitmodules  AGENTS.md  DyeConfig_Qwen2.5-7B-Instruct.json  LICENSE  README.md  README_zh.md  ablation_test.py  log_viewer.py  pyproject.toml  requirements.txt  run.py  run_qwen2.5.py  test_model.py  test_temp.py
package/: README.md  pyproject.toml
package/tokendye/: __init__.py  config.py  dataset.py  module.py
run_Qwen2.5-7B-Instruct/: DyeConfig.json  README_zh.md  ablation_test.py  test_model.py  train.py  utils.py
run_Qwen3.5-4B/: DyeConfig.json  README_zh.md  ablation_test.py  sweep_lr.py  test_model.py  train.py  utils.py
tokendye/: __init__.py  config.py  dataset.py  dye_dataset.py  dye_label.py  dye_layer.py  label.py  module.py
tokendye/dataset/: __init__.py  dye_dataset.py  functional.py
