[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokendye"
version = "0.1.2"
description = "TokenDye is a way to fine-tune almost any LM"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "yuyi2439" }]
keywords = ["tokendye", "lm", "llm"]
dependencies = [
    "pydantic",
    "jsonl5>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/yuyi2439/tokendye"
Repository = "https://github.com/yuyi2439/tokendye"
Issues = "https://github.com/yuyi2439/tokendye/issues"

[tool.hatch.build.targets.wheel]
packages = ["tokendye"]
